# tracebot_mockup

./: README.md  noetic.repos  upstream.repos
.github/workflows/: industrial_ci_action.yml
tracebot_mockup_description/: CMakeLists.txt  package.xml
tracebot_mockup_description/config/: head_camera.yaml  tracebot_mockup.rviz
tracebot_mockup_description/launch/: camera_display.launch  load_model.launch  view_tracebot_mockup.launch
tracebot_mockup_description/meshes/: shelf.stl  stand.stl  table.stl  temp.stl  temp2.stl  vial_holder.stl
tracebot_mockup_description/urdf/: .tracebot_mockup_macro.urdf.xacro.swp  tracebot_mockup.urdf.xacro  tracebot_mockup_macro.urdf.xacro
tracebot_mockup_gazebo/: CMakeLists.txt  package.xml
tracebot_mockup_gazebo/config/: tracebot_mockup.rviz  tracebot_mockup_controllers.yaml  tracebot_mockup_left_controllers.yaml  tracebot_mockup_right_controllers.yaml
tracebot_mockup_gazebo/launch/: view_tracebot_gazebo.launch  view_tracebot_gazebo_old.launch  view_tracebot_model.launch  view_tracebot_model_old.launch  view_tracebot_rviz.launch
tracebot_mockup_gazebo/launch/inc/: load_ur.launch.xml
tracebot_mockup_gazebo/models/Pump/: model.config  model.sdf
tracebot_mockup_gazebo/models/Pump/Untitled/: model.sdf
tracebot_mockup_gazebo/models/Shelf/: model.sdf
tracebot_mockup_gazebo/models/Shelf/meshes/: shelf.stl
tracebot_mockup_gazebo/models/Table/: model.sdf
tracebot_mockup_gazebo/models/Vial_Holder/: model.config  model.sdf
tracebot_mockup_gazebo/scripts/: arm_pub.py  command_pub.py  gazebo_model_test.py
tracebot_mockup_gazebo/urdf/: _d435.urdf.xacro  tracebot_mockup.urdf.xacro  tracebot_mockup_macro.urdf.xacro  tracebot_mockup_old.urdf.xacro  ur_macro.xacro
tracebot_mockup_gazebo/worlds/: tracebot_mockup_world.world
tracebot_mockup_moveit/: .setup_assistant  CMakeLists.txt  package.xml
tracebot_mockup_moveit/config/: joint_limits.yaml  kinematics.yaml  ros_controllers.yaml
tracebot_mockup_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  tracebot_mockup_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  view_tracebot_gazebo.launch  view_tracebot_moveit.launch  warehouse.launch
tracebot_mockup_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
tracebot_mockup_moveit_config/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  ompl_planning.yaml  ros_controllers.yaml  tracebot_mockup.srdf
tracebot_mockup_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  tracebot_mockup_moveit_controller_manager.launch.xml  trajectory_execution.launch.xml  view_tracebot_moveit.launch  warehouse.launch
tracebot_mockup_simulator/: CMakeLists.txt  package.xml
tracebot_mockup_simulator/config/: core_controllers.yaml  tracebot_mockup_hardware.yaml
tracebot_mockup_simulator/launch/: tracebot_mockup_simulator.launch
