<?xml version="1.0"?>
<package format="2">
  <name>tracebot_mockup_gazebo</name>
  <version>0.0.0</version>
  <description>The tracebot_mockup_gazebo package</description>

  <maintainer email="ben.gordon@astechprojects.co.uk">Ben Gordon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>ur_description</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>image_publisher</exec_depend>

  <test_depend>roslaunch</test_depend>

  <export>
  </export>
</package>
